--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,13 +1,24 @@
-site_name: My Docs
+# Project information
+site_name: License Manager
+site_url: https://license-manager.netified.io
+site_author: Thomas ILLIET
 
+# Repository
+repo_name: netified/license-manager
+repo_url: https://github.com/netified/license-manager
+
+# Copyright
+copyright: Copyright &copy; 2022 Netified
+
+# Configuration
 theme:
   name: material
 
-  # 404 page
+  # Static files
   static_templates:
     - 404.html
 
-  # Necessary for search to work properly
+  # Don't include MkDocs' JavaScript
   include_search_page: false
   search_index_only: true
 
@@ -19,3 +30,23 @@ theme:
   favicon: assets/favicon.png
   icon:
     logo: logo
+
+# Customization
+extra:
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/netified
+    - icon: fontawesome/brands/docker
+      link: https://hub.docker.com/u/netifiedandco
+    - icon: fontawesome/brands/twitter
+      link: https://twitter.com/netifiedandco
+    - icon: fontawesome/solid/cube
+      link: https://www.nuget.org/profiles/netifiedandco  
+
+# Extension
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
