Improve mkdocs configuration

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,18 +12,44 @@ copyright: Copyright &copy; 2022 Netified
 
 # Configuration
 theme:
+  language: en
   name: material
 
   # Static files
   static_templates:
     - 404.html
 
+  features:
+    - navigation.prune
+    - navigation.top
+    - navigation.instant
+    - navigation.tracking
+    - navigation.tabs
+    - navigation.tabs.sticky
+    - navigation.sections
+    - search.highlight
+    - search.share
+    - search.suggest
+
   # Don't include MkDocs' JavaScript
   include_search_page: false
   search_index_only: true
 
-  # Default values, taken from mkdocs_theme.yml
-  language: en
+  # Theme palette configuration
+  palette:
+    - scheme: default
+      primary: indigo
+      accent: indigo
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+    - scheme: slate
+      primary: indigo
+      accent: indigo
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
+
   font:
     text: Roboto
     code: Roboto Mono
@@ -42,6 +68,17 @@ extra:
       link: https://twitter.com/netifiedandco
     - icon: fontawesome/solid/cube
       link: https://www.nuget.org/profiles/netifiedandco  
+  consent:
+    title: Cookie consent
+    description: >- 
+      We use cookies to recognize your repeated visits and preferences, as well
+      as to measure the effectiveness of our documentation and whether users
+      find what they're searching for. With your consent, you're helping us to
+      make our documentation better.
+      
+# Plugin
+plugins:
+  - search
 
 # Extension
 markdown_extensions:
@@ -50,3 +87,7 @@ markdown_extensions:
   - pymdownx.inlinehilite
   - pymdownx.snippets
   - pymdownx.superfences
+  
+# Page tree
+nav:
+    - Home: index.md
