--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80 default_server;
     listen [::]:80 default_server;
 
-    root /usr/share/nginx/site;
+    root /usr/share/nginx/html;
 
     server_name _;
     error_page 404 /404.html;
